# rules_apple_apple_precompiled_resource_bundle_issue

./: MODULE.bazel  README.md
MyApp/: BUILD  ResourceBundle_Info.plist
MyApp/Resources/da.lproj/: LaunchScreen.storyboard
MyApp/Sources/: MyApp.swift
